--- a/config.yml
+++ b/config.yml
@@ -6,12 +6,12 @@ engine:                      # Engine settings.
   name: "abuahfish_v2"        # Binary name of the engine to use.
   working_dir: ""            # Directory where the chess engine will read and write files. If blank or missing, the current directory is used.
   protocol: "uci"            # "uci" or "xboard"
-  ponder: true               # Think on opponent's time.
+  ponder: false               # Think on opponent's time.
   polyglot:
     enabled: true           # Activate polyglot book.
     book:
-      standard:              # List of book file paths for variant standard.
-        - books/gm2600.bin
+#      standard:              # List of book file paths for variant standard.
+#        - books/gm2600.bin
 #     atomic:                # List of book file paths for variant atomic.
 #       - engines/atomicbook1.bin
 #       - engines/atomicbook2.bin
@@ -52,15 +52,15 @@ engine:                      # Engine settings.
       move_quality: "best"   # One of "good", "best".
 # engine_options:            # Any custom command line params to pass to the engine.
 #   cpuct: 3.1
-  homemade_options:
+#  homemade_options:
 #   Hash: 256
 #  uci_options:               # Arbitrary UCI options passed to the engine.
 #    Move Overhead: 100       # Increase if your bot flags games too often.
 #    Threads: 2               # Max CPU threads the engine can use.
 #    Hash: 256                # Max memory (in megabytes) the engine can allocate.
-#   go_commands:             # Additional options to pass to the UCI go command.
+   go_commands:             # Additional options to pass to the UCI go command.
 #     nodes: 1               # Search so many nodes only.
-#     depth: 5               # Search depth ply only.
+     depth: 4               # Search depth ply only.
 #     movetime: 1000         # Integer. Search exactly movetime milliseconds.
 # xboard_options:            # Arbitrary XBoard options passed to the engine.
 #   cores: "4"
