--- a/config.yml
+++ b/config.yml
@@ -10,8 +10,8 @@ engine:                      # Engine settings.
   polyglot:
     enabled: true           # Activate polyglot book.
     book:
-#      standard:              # List of book file paths for variant standard.
-#        - books/gm2600.bin
+      standard:              # List of book file paths for variant standard.
+        - books/gm2600.bin
 #     atomic:                # List of book file paths for variant atomic.
 #       - engines/atomicbook1.bin
 #       - engines/atomicbook2.bin
