--- a/config.yml
+++ b/config.yml
@@ -2,13 +2,13 @@ token: "lip_LZzYEgkgcibTgb4sE504"    # Lichess OAuth2 Token.
 url: "https://lichess.org/"  # Lichess base URL.
 
 engine:                      # Engine settings.
-  dir: "./"          # Directory containing the engine. This can be an absolute path or one relative to lichess-bot/.
+  dir: "./bin"          # Directory containing the engine. This can be an absolute path or one relative to lichess-bot/.
   name: "abuahfish_v2"        # Binary name of the engine to use.
   working_dir: ""            # Directory where the chess engine will read and write files. If blank or missing, the current directory is used.
   protocol: "uci"            # "uci" or "xboard"
   ponder: false               # Think on opponent's time.
   polyglot:
-    enabled: false           # Activate polyglot book.
+    enabled: true           # Activate polyglot book.
     book:
       standard:              # List of book file paths for variant standard.
         - books/gm2600.bin
